--- a/index.wxml
+++ b/index.wxml
@@ -1,10 +1,7 @@
 <!--index.wxml-->
-<view class = 'box'>
-  <view class = 'title'>电科19-2 董经纬 金额计算器</view>
-  <view>
-    <input placeholder ='请输入本金' type = 'number' bindblur = 'startnum'></input>
-    <input placeholder = '请输入利率'tupe = 'number' bindblur = 'endnum'></input>
-  </view>
-  <view>最终的金钱数{{sum}}</view>
-  <button type = 'primary' bindtap = 'calc'>计算</button>
+<view class="box">
+  <view class = 'title'>电科19-2 董经纬 彩票机</view>
+  <view>彩票号为：</view>
+  <view wx:for= '{{rand}}'>{{item}}</view>
+  <button type='primary'bindtap='newRand'>刷新</button>
 </view>
